k8s-manifests/qa/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tier-app
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tier-app
  template:
    metadata:
      labels:
        app: tier-app
    spec:
      imagePullSecrets:
      - name: tier-app-reg-secret
      containers:
      - name: tier-app
        image: iamridoydey/3-tier-app:be9b9cb10fd5b7616b9c3a4543d63a988d692e76
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
