k8s-manifests/qa/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 3-tier-app
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 3-tier-app
  template:
    metadata:
      labels:
        app: 3-tier-app
    spec:
      imagePullSecrets:
      - name: 3-tier-app-reg-secret
      containers:
      - name: 3-tier-app
        image: iamridoydey/3-tier-app
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
