k8s-manifests/qa/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: 3-tier-app-svc
spec:
  type: ClusterIP
  selector:
    app: 3-tier-app
  ports:
    - port: 5000
      targetPort: 5000
